Grid3 completed and fixed footer overlap

--- a/css/site.css
+++ b/css/site.css
@@ -1,7 +1,7 @@
 
 main>.container {
     padding: 60px 15px 0;
-    margin-bottom: 5rem;
+    margin-bottom: 1rem;
 }
 
 .homeBG {
